--- a/style.css
+++ b/style.css
@@ -161,7 +161,7 @@ span {
 
 .home-img img {
     position: relative;
-    width: 32vw;
+    width: 22vw;
     border-radius: 50%;
     box-shadow: 0 0 25px solid #b74b4b;
     cursor: pointer;
@@ -270,7 +270,7 @@ border:1px solid white;
 
     0%,
     20% {
-        content: "Full Stuck Web Developer ehe ";
+        content: "Full Stack Web Developer ";
     }
 
     21%,
@@ -285,12 +285,7 @@ border:1px solid white;
 
     61%,
     80% {
-        content: "Bug Hunter ";
-    }
-
-    81%,
-    100% {
-        content: "alive :)";
+       content: "Smartphone Technician";    
     }
 }
 
