--- a/partials/home.html
+++ b/partials/home.html
@@ -1,1 +1,28 @@
+<div class="home-img">
+  <img src="css/me.jpg" />
+</div>
 
+<div class="home-content">
+  <h1>Hi, It's <span>Achyy</span></h1>
+  <h3 class="typing-text">I'm a <span id="typing"></span></h3>
+
+  <p>
+    “I’m a Computer and Network Engineering graduate with a passion for technology and cybersecurity. I enjoy coding, ethical hacking, and bug hunting to strengthen digital security, and I’m also deeply interested in philosophy.
+  </p>
+  <div class="social-icons">
+    <h3 class="reach-title"> 📫 How to reach me<span class="dots"></span></h3>
+    <a href="mailto:tearsachly@gmail.com" target="_blank"
+      ><i class="fa-solid fa-envelope"></i
+    ></a>
+    <a href="https://github.com/TearsAchly" target="_blank"
+      ><i class="fa-brands fa-github"></i
+    ></a>
+    <a href="https://www.facebook.com/TearsAchly/" target="_blank"
+      ><i class="fa-brands fa-facebook"></i
+    ></a>
+    <a href="https://t.me/achlysa" target="blank">
+      <i class="fa-brands fa-telegram"></i
+    ></a>
+  </div>
+  <a href="#" class="btn">Download CV</a>
+</div>
