--- a/partials/home.html
+++ b/partials/home.html
@@ -7,10 +7,13 @@
   <h3 class="typing-text">I'm a <span id="typing"></span></h3>
 
   <p>
-    “I’m a Computer and Network Engineering graduate with a passion for technology and cybersecurity. I enjoy coding, ethical hacking, and bug hunting to strengthen digital security, and I’m also deeply interested in philosophy.
+    “I’m a Computer and Network Engineering graduate with a passion for
+    technology and cybersecurity. I enjoy coding, ethical hacking, and bug
+    hunting to strengthen digital security, and I’m also deeply interested in
+    philosophy.
   </p>
   <div class="social-icons">
-    <h3 class="reach-title"> 📫 How to reach me<span class="dots"></span></h3>
+    <h3 class="reach-title">📫 How to reach me<span class="dots"></span></h3>
     <a href="mailto:tearsachly@gmail.com" target="_blank"
       ><i class="fa-solid fa-envelope"></i
     ></a>
