add white thema, favicon , and adalah pokoknya

--- a/partials/projects.html
+++ b/partials/projects.html
@@ -1,3 +1,7 @@
+<button class="refresh-btn github" onclick="refreshRepos()">
+  <p>⟳ Refresh Project</p>
+</button>
+
 <div id="repo-list" class="repo-list">
   <p>Loading repositories...</p>
 </div>
