--- a/partials/home.html
+++ b/partials/home.html
@@ -1,15 +1,15 @@
 <div class="home-img">
-  <img src="css/me.jpg" />
+  <img src="/style/images/me.jpg" />
 </div>
 
 <div class="home-content">
   <h1>Hi, It's <span>Achyy</span></h1>
   <h3 class="typing-text">I'm a <span id="typing"></span></h3>
-
   <p>
-<br>
-  This is where I <a href="https://facebook.com" target="_blank" class="notes">share what I learn</a> and explore along the way.
-</p>
+  Just someone who loves learning and growing.</br>
+  You can call me <strong>INDRA</strong> - it's my real name.</br>
+  This is where I <a href="http://tearsachly.is-a.dev/Simple-Notes/" target="_blank" class="notes">share what I learn</a> and explore along the way.
+  </p>
 
   <div class="social-icons">
     <h3 class="reach-title">📫 How to reach me<span class="dots"></span></h3>
