--- a/style/css/style.css
+++ b/style/css/style.css
@@ -12,12 +12,95 @@
   font-family: "Poppins", sans-serif;
 }
 
+/* ================= RESET ================= */
+
+/* ================= THEME VARIABLES ================= */
+
+:root {
+  --bg-1: #0d1117;;
+  --bg-2: #161b22;
+  --bg-3:#010409;
+  --bg-4:#1e232a;
+  --text-1: white;
+  --text-2: #c9d1d9;
+  --text-muted: #8b949e;
+  --border: #30363d;
+  --accent: #58a6ff;
+  
+}
+
+html[data-theme="light"] {
+  --bg-1: #ffffff;
+  --bg-2: #f6f8fa;
+  --bg-3:#f6f8fa;
+  --bg-4:#f6f8fa;
+  --text-1: black;
+  --text-2: #24292f;
+  --text-muted: #57606a;
+  --border: #d0d7de;
+  --accent: #0969da;
+  
+  
+}
+
+/* ================= THEME VARIABLES ================= */
+
+body {
+  background-color: var(--bg-1);
+  color: var(--text-2);
+}
+
+header {
+  background-color:var(--bg-2);
+  border-bottom:0.2rem solid var(--border);
+}
+
+footer {
+  background-color:var(--bg-2);
+  border-top:0.2rem solid var(--border);
+}
+section#home.home.active {
+  background-color: var(--bg);
+}
+
+.repo-card.github,
+.service-item,
+.skill-category,
+.education-item,
+.experience-item {
+  background: var(--bg-1);
+  border: 1px solid var(--border);
+}
+
+.repo-desc,
+.repo-meta {
+  color: var(--text-muted);
+}
+
+a,
+.repo-name,
+.notes {
+   color:var(--accent);
+}
+
+.repo-card.github,
+.service-item,
+.skill-category,
+.education-item,
+.experience-item {
+  background: var(--bg-1);
+  border: 1px solid var(--border);
+}
+
+/* ================= THEME TRANSITION ================= */
+
 html,
 body {
   width: 100%;
   min-height: 100%;
-  background-color: #0d1117;
-  color: #8a9099;
+  transition:
+    background-color 0.35s ease,
+    color 0.35s ease;
 }
 
 html {
@@ -28,6 +111,10 @@ body {
   overflow: hidden;
 }
 
+a {
+font-weight:700;
+}
+
 main#app {
   position: relative;
   height: 100vh;
@@ -36,7 +123,24 @@ main#app {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  overflow-y: auto; 
+  overflow-y: auto;
+}
+a,
+header,
+footer,
+section,
+.nav a,
+.repo-card,
+.service-item,
+.skill-category,
+.education-item,
+.experience-item,
+.title,
+.notes  {
+  transition:
+    background-color 0.35s ease,
+    color 0.35s ease,
+    border-color 0.35s ease;
 }
 
 /* ================= HEADER ================= */
@@ -47,17 +151,14 @@ header {
   left: 0;
   width: 100%;
   padding: 1.2rem 9%;
-  background: linear-gradient(to bottom, #0d1117, rgba(13, 17, 23, 0.75));
   display: flex;
   justify-content: space-between;
   align-items: center;
   z-index: 100;
-  backdrop-filter: blur(6px);
-  box-shadow: 0 0 .5rem #58a6ff;
 }
 
-header .logo img{
-width:4rem;
+header .logo img {
+  width: 4rem;
 }
 
 .menu-toggle {
@@ -68,7 +169,6 @@ width:4rem;
 
 nav a {
   font-size: 1.8rem;
-  color: #2596be;
   margin-left: 4rem;
   transition: 0.3s ease;
   border-bottom: 3px solid transparent;
@@ -77,7 +177,6 @@ nav a {
 
 nav a:hover,
 nav a.active {
-  color: #3d84df;
   border-bottom: 3px solid #3d84df;
 }
 
@@ -86,7 +185,7 @@ nav a.active {
 section {
   min-height: auto;
   padding: 110px 9% 5rem;
-  margin-top:2em;
+  margin-top: 2em;
   display: none;
   opacity: 0;
   transform: scale(0.98);
@@ -108,18 +207,22 @@ section#home.home.active {
   justify-content: center;
   align-items: center;
   gap: 8rem;
-  background-color: #0d1117;
   min-height: calc(100vh - 70px);
 }
 
 .home-content h1 {
   font-size: 6rem;
   line-height: 1.2;
+  color:var(--text-1)
 }
 
 .home-content h3 {
   font-size: 4rem;
   margin-bottom: 1.5rem;
+  color:var(--text-2)
+}
+
+.home-content h3 #typing {
 }
 
 .home-content p {
@@ -133,8 +236,11 @@ section#home.home.active {
   box-shadow: 0 0 2rem #67bed9;
 }
 
-.notes{
-color:#67bed9;
+.notes {
+}
+
+.notes:hover {
+  text-decoration: underline;
 }
 
 /* ================= Links ================= */
@@ -146,7 +252,6 @@ color:#67bed9;
 .social-icons h3 {
   font-size: 2rem;
   margin-bottom: 1.5rem;
-  color: #58a6ff;
   font-weight: 600;
 }
 
@@ -159,22 +264,17 @@ color:#67bed9;
   margin-right: 1.5rem;
   border-radius: 50%;
   border: 2px solid #58a6ff;
-  color: #58a6ff;
   font-size: 2rem;
   text-decoration: none;
   transition: 0.3s ease;
 }
 
 .social-icons a:hover {
-  background-color: #58a6ff;
-  color: black;
-  box-shadow: 0 0 20px #58a6ff;
   transform: translateY(-5px) scale(1.1);
 }
 
 .reach-title {
   font-size: 2rem;
-  color: #58a6ff;
   font-weight: 600;
 }
 
@@ -214,19 +314,17 @@ color:#67bed9;
   display: inline-block;
   margin-top: 2rem;
   padding: 1rem 2.8rem;
-  background-color: transparent;
   border-radius: 4rem;
   font-size: 1.6rem;
-  color: #2596be;
-  border: 2px solid #58a6ff;
   transition: 0.3s ease;
   letter-spacing: 0.1rem;
+  border: 2px solid var(--border);
 }
 
 .btn:hover {
-  background-color: #58a6ff;
-  color: black;
-  box-shadow: 0 0 20px #58a6ff;
+  text-decoration:underline;
+  color: var(--text-1);
+  box-shadow: 0 0 20px var(--anccent);
 }
 
 /* ================= SERVICES ================= */
@@ -239,21 +337,18 @@ color:#67bed9;
 
 .service-item {
   background: #0d1117;
-  border: 1px solid #30363d;
   border-radius: 8px;
   padding: 16px;
   font-size: 1.4rem;
   transition: border 0.2s ease;
-  width:100%;
-
+  width: 100%;
 }
 
 .service-item:hover {
-  border-color: #58a6ff;
+  
 }
 
 .service-item h3 {
-  color: #58a6ff;
   font-size: 2.3rem;
   min-height: 2rem;
   margin-bottom: 1rem;
@@ -264,6 +359,8 @@ color:#67bed9;
   opacity: 0.9;
 }
 
+/* ================= PROJECT ================= */
+
 .repo-list {
   display: grid;
   grid-template-columns: repeat(3, 1fr); /* 3 ke samping */
@@ -271,19 +368,16 @@ color:#67bed9;
 }
 
 .repo-card.github {
-  background: #0d1117;
   border: 1px solid #30363d;
   border-radius: 8px;
   padding: 16px;
   font-size: 1.4rem;
   transition: border 0.2s ease;
-  width:100%;
+  width: 100%;  
 }
-
-.repo-card.github:hover {
-  border-color: #58a6ff;
+.repo-card.github:hover{
+border-color: #58a6ff;
 }
-
 .repo-header {
   display: flex;
   align-items: center;
@@ -294,7 +388,6 @@ color:#67bed9;
 .repo-name {
   font-size: 1.8rem;
   font-weight: 600;
-  color: #58a6ff;
   text-decoration: none;
 }
 
@@ -307,16 +400,12 @@ color:#67bed9;
   padding: 2px 8px;
   border-radius: 999px;
   border: 1px solid #30363d;
-  color: #8b949e;
 }
 
 .repo-badge.private {
-  color: #f0f6fc;
-  border-color: #6e7681;
 }
 
 .repo-desc {
-  color: #8b949e;
   margin: 6px 0 10px;
   line-height: 1.4;
 }
@@ -325,7 +414,6 @@ color:#67bed9;
   display: flex;
   gap: 16px;
   font-size: 1.2rem;
-  color: #8b949e;
   flex-wrap: wrap;
 }
 
@@ -335,13 +423,45 @@ color:#67bed9;
   gap: 6px;
 }
 
-/* language dot */
 .dot {
   width: 10px;
   height: 10px;
   border-radius: 50%;
   display: inline-block;
 }
+
+.refresh-btn.github {
+  font-size: 100rem;
+  background-color:var(--bg-4);  
+  border: 1px solid #30363d;
+  padding: 8px 14px;
+  border-radius: 6px;
+  font-size: 0.85rem;
+  cursor: pointer;
+  transition: all 0.2s ease;
+  margin-bottom: 2rem;
+}
+
+.refresh-btn.github p {
+  font-size: 2rem;
+  color:var(--text-1);
+  }
+
+
+
+.refresh-btn.github:active {
+  transform: translateY(1px);
+}
+
+.refresh-btn:disabled {
+  opacity: 0.6;
+  cursor: not-allowed;
+}
+
+.refresh-btn.github:hover {
+  border-color: #58a6ff;
+  }
+
 
 /* ================= SKILLS ================= */
 
@@ -352,14 +472,12 @@ color:#67bed9;
 }
 
 .skill-category {
-  background: #0d1117;
   border: 1px solid #30363d;
   border-radius: 8px;
   padding: 16px;
   font-size: 1.4rem;
   transition: border 0.2s ease;
-  width:100%;
-
+  width: 100%;
 }
 
 .skill-category:hover {
@@ -367,17 +485,18 @@ color:#67bed9;
 }
 
 .skill-category h3 {
-  color: #58a6ff;
   min-height: 2rem;
   font-size: 2.2rem;
   margin-bottom: 1.2rem;
+  color:var(--text-1);
 }
 
 .skill-chips {
+  background-color:var(--bg-4);
+  border:solid 1px var(--border);
   display: flex;
   flex-wrap: wrap;
   gap: 0.8rem;
-  background: rgba(255, 255, 255, 0.03);
   padding: 1rem;
   border-radius: 0.8rem;
 }
@@ -386,16 +505,15 @@ color:#67bed9;
   display: block;
   width: 100%;
   font-size: 1.7rem;
-  color: #2596be;
+  color:var(--text-muted);
 }
 
 .chip {
+  color:var(--text-1);
   padding: 0.6rem 1.2rem;
   font-size: 1.35rem;
   border-radius: 999px;
-  background: rgba(255, 255, 255, 0.06);
-  border: 1px solid rgba(255, 255, 255, 0.12);
-  color: #e5e7eb;
+  border: 1px solid var(--border);
   transition: all 0.2s ease;
   white-space: nowrap;
 }
@@ -405,27 +523,33 @@ color:#67bed9;
 }
 
 .chip:hover {
-background-color: #58a6ff;
-  color: black;
-  box-shadow: 0 0 20px #58a6ff;
+  box-shadow: 0 0 .5rem var(--accent);
 }
 
+/* ================= SKILLS ================= */
+
 /* ================= EDUCATION & EXPERIENCE ================= */
+.main-title,
+.main-title-non {
+  font-size: 2.1rem;
+  font-size: 3rem;
+  color:var(--text-1)
+}
+
 .title {
   font-size: 2.1rem;
-  color:#58a6ff;
+  color:var(--text-muted);
 }
 .education-item,
 .experience-item {
-  background: #0d1117;
-  border: 1px solid #30363d;
   border-radius: 8px;
   padding: 2rem;
   font-size: 1.4rem;
   transition: border 0.2s ease;
-  width:100%;
+  width: 100%;
   transition: 0.3s ease;
-  margin-bottom:2.5rem;;
+  margin-bottom: 2.5rem;
+  background-color:var(--bg-4)
 }
 
 .education-item:hover,
@@ -435,9 +559,9 @@ background-color: #58a6ff;
 
 .education-item h3,
 .experience-item h3 {
-  color: #2596be;
   font-size: 2.1rem;
   margin-bottom: 1rem;
+  color:var(--text-1)
 }
 
 .education-item p,
@@ -454,9 +578,19 @@ background-color: #58a6ff;
 
 .experience-item li::before {
   content: "•";
-  color: #b74b4b;
   margin-right: 0.6rem;
 }
+
+/* ================= EDUCATION GRID ================= */
+
+.education-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  gap: 2.5rem;
+  margin-top: 1.5rem;
+  margin-bottom: 4rem;
+}
+
 
 /* ================= FOOTER ================= */
 
@@ -465,12 +599,10 @@ footer {
   padding: 2.5rem 0;
   font-size: 1.4rem;
   opacity: 0.8;
-  background: linear-gradient(to bottom, #0d1117, rgba(13, 17, 23, 0.75));
   margin-top: auto;
   padding: 2rem 0;
   text-align: center;
   opacity: 0.6;
-  box-shadow: 0 0 .5rem #58a6ff;
 }
 
 /* ================= MOBILE ================= */
@@ -479,7 +611,7 @@ footer {
   .menu-toggle {
     display: block;
     font-size: 2.5rem;
-    color: white;
+    color: var(--text-1);
     background: none;
     cursor: pointer;
     z-index: 101;
@@ -496,7 +628,6 @@ footer {
     right: -100%;
     width: 60%;
     height: calc(100vh - 70px);
-    background-color: rgba(13, 17, 23, 0.97);
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -506,7 +637,6 @@ footer {
     z-index: 1001;
   }
 
-
   nav.active {
     right: 0;
   }
@@ -514,40 +644,36 @@ footer {
   nav a {
     font-size: 2.2rem;
     margin: 2rem 0;
-    position:relative;
+    position: relative;
   }
-  
+
   /* ================= NAV OVERLAY ================= */
 
-.nav-overlay {
-  position: fixed;
-  inset: 0;
-  background: rgba(0, 0, 0, 0.55);
-  backdrop-filter: blur(4px);
-  opacity: 0;
-  pointer-events: none;
-  transition: opacity 0.35s ease;
-  z-index: 1000;
-}
+  .nav-overlay {
+    position: fixed;
+    inset: 0;
+    backdrop-filter: blur(4px);
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.35s ease;
+    z-index: 1000;
+  }
 
-.nav-overlay.active {
-  opacity: 1;
-  pointer-events: auto;
-}
+  .nav-overlay.active {
+    opacity: 1;
+    pointer-events: auto;
+  }
 
-  
   nav a.active::before {
-  content: "";
-  position: absolute;
-  left: -1.5rem;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 4px;
-  height: 60%;
-  background: #58a6ff;
-  border-radius: 999px;
-}
-
+    content: "";
+    position: absolute;
+    left: -1.5rem;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 4px;
+    height: 60%;
+    border-radius: 999px;
+  }
 
   /* ================= HOME ================= */
 
@@ -580,13 +706,12 @@ footer {
   .home-img img {
     width: 60vw;
     max-width: 280px;
-    box-shadow: 0 0 30px #67bed9;
   }
 
   /* ================= PROJECTS ================= */
 
   .projects {
-    display: block; 
+    display: block;
   }
 
   .repo-list {
@@ -639,4 +764,3 @@ footer {
     }
   }
 }
-
