add some functions

--- a/partials/home.html
+++ b/partials/home.html
@@ -8,7 +8,8 @@
   <p>
   Just someone who loves learning and growing.</br>
   You can call me <strong>INDRA</strong> - it's my real name.</br>
-  This is where I <a href="http://tearsachly.is-a.dev/Simple-Notes/" target="_blank" class="notes">share what I learn</a> and explore along the way.
+  currenly im learning <span><strong>Haskell</strong></span>.</br>
+  This is <a href="http://tearsachly.is-a.dev/Simple-Notes/" target="_blank" class="notes"> where </a> I share what I learn and explore along the way.
   </p>
 
   <div class="social-icons">
