change: change hyperlink

--- a/partials/home.html
+++ b/partials/home.html
@@ -8,8 +8,7 @@
   <p>
   Just someone who loves learning and growing.</br>
   You can call me <strong>INDRA</strong> - it's my real name.</br>
-  currenly im learning <span><strong>Haskell</strong></span>.</br>
-  This is <a href="http://tearsachly.is-a.dev/Simple-Notes/" target="_blank" class="notes"> where </a> I share what I learn and explore along the way.
+  This is <a href="https://tearsachly.is-a.dev/slow-learn-studies/" target="_blank" class="notes"> where </a> I share what I learn and explore along the way.
   </p>
 
   <div class="social-icons">
