--- a/partials/home.html
+++ b/partials/home.html
@@ -4,9 +4,9 @@
 
 <div class="home-content">
   <h1>Hi, It's <span>Achyy</span></h1>
-  <h3 class="typing-text">I'm a <span id="typing"></span></h3>
-  <p>
-  Just someone who loves learning and growing.</br>
+  <!-- <h3 class="typing-text">I'm a <span id="typing"></span></h3> -->
+  <h3></h3>
+  <p>Just someone who loves learning and growing.</br>
   You can call me <strong>INDRA</strong> - it's my real name.</br>
   This is <a href="https://tearsachly.is-a.dev/slow-learn-studies/" target="_blank" class="notes"> where </a> I share what I learn and explore along the way.
   </p>
